k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nitrocore
  namespace: rigby-host
spec:
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: nitrocore
