k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nitrocore-ingress
  namespace: rigby-host
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - gdps.rigbyhost.com
    secretName: gdps-rigbyhost-com-tls
  rules:
  - host: gdps.rigbyhost.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nitrocore
            port:
              number: 3000
